# Graficas_por_computadora_proyecto_1

./: CMakeLists.txt  CMakeLists.txt~  README.md  execute.sh  storyboard.docx
libs/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.cpp~  IndexBuffer.h  IndexBuffer.h~  Renderer.cpp  Renderer.cpp~  Renderer.h  Renderer.h~  Shader.cpp  Shader.cpp~  Shader.h  Shader.h~  Texture.cpp  Texture.cpp~  Texture.h  Texture.h~  VertexArray.cpp  VertexArray.h  VertexArray.h~  VertexBuffer.cpp  VertexBuffer.cpp~  VertexBuffer.h  VertexBuffer.h~  VertexBufferLayout.cpp  VertexBufferLayout.h  VertexBufferLayout.h~  glad.c  glad.h
pruebas_trayectorias/: Prueba_Spiral.ipynb
res/shaders/: Basic.shader  Basic.shader~  Space.shader  Space.shader~  Vortex.shader  Vortex.shader~
src/: IndexBuffer.cpp~  VertexBuffer.h~  main.cpp  main.cpp~
src/Otros/: Cuadrado.cpp  Manejo_de_errores.cpp  Textura and model view projec.cpp  Triangulo.cpp
