add_library(glad SHARED glad.h glad.c)
add_library(Renderer SHARED Renderer.h Renderer.cpp)
add_library(VertexBuffer SHARED VertexBuffer.h VertexBuffer.cpp)
add_library(IndexBuffer SHARED IndexBuffer.h IndexBuffer.cpp)
add_library(VertexArray SHARED VertexArray.h VertexArray.cpp)
add_library(VertexBufferLayout SHARED VertexBufferLayout.h VertexBufferLayout.cpp)
add_library(Shader SHARED Shader.h Shader.cpp)
add_library(stb_image SHARED stb_image.h stb_image.cpp)
add_library(Texture SHARED Texture.h Texture.cpp)

target_include_directories(Renderer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(IndexBuffer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(VertexBuffer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(VertexArray PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(VertexBufferLayout PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(Shader PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(stb_image PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(glad PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(Texture PUBLIC ${CMAKE_CURRENT_LIST_DIR})

